--- a/package.json
+++ b/package.json
@@ -4,15 +4,39 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-native-picker/picker": "^2.8.1",
+    "@react-navigation/native": "^7.0.2",
+    "@react-navigation/stack": "^7.0.2",
     "expo": "~51.0.28",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-autocomplete-dropdown": "^4.0.0",
+    "react-native-autocomplete-input": "^5.4.0",
+    "react-native-context-menu-view": "^1.16.0",
+    "react-native-dropdown-select": "^1.0.7",
+    "react-native-material-menu": "^2.0.0",
+    "react-native-menu": "^0.23.0",
+    "react-native-paper": "^5.12.5",
+    "react-native-paper-autocomplete": "^0.12.0",
+    "react-native-paper-dropdown": "^2.3.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "^4.0.0",
+    "react-native-svg": "^15.7.1",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.10",
+    "use-latest-callback": "^0.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
